--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,37 @@
 backcall==0.1.0
+certifi==2018.8.24
+chardet==3.0.4
+cycler==0.10.0
 decorator==4.3.0
+idna==2.7
 ipykernel==4.9.0
 ipython==6.5.0
 ipython-genutils==0.2.0
 jedi==0.12.1
 jupyter-client==5.2.3
 jupyter-core==4.4.0
+kiwisolver==1.0.1
+lxml==4.2.5
+matplotlib==3.0.0
 numpy==1.15.1
 pandas==0.23.4
+pandas-datareader==0.7.0
 parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.4
 prompt-toolkit==1.0.15
 ptyprocess==0.6.0
 Pygments==2.2.0
+pyparsing==2.2.2
 python-dateutil==2.7.3
 pytz==2018.5
 pyzmq==17.1.2
+requests==2.19.1
+scipy==1.1.0
 simplegeneric==0.8.1
 six==1.11.0
 tornado==5.1.1
 traitlets==4.3.2
+urllib3==1.23
 wcwidth==0.1.7
+wrapt==1.10.11
