--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,31 @@
 backcall==0.1.0
+bleach==3.0.0
 certifi==2018.8.24
 chardet==3.0.4
 cycler==0.10.0
 decorator==4.3.0
+defusedxml==0.5.0
+entrypoints==0.2.3
 idna==2.7
 ipykernel==4.9.0
 ipython==6.5.0
 ipython-genutils==0.2.0
 jedi==0.12.1
+Jinja2==2.10
+jsonschema==2.6.0
 jupyter-client==5.2.3
 jupyter-core==4.4.0
 kiwisolver==1.0.1
 lxml==4.2.5
+MarkupSafe==1.0
 matplotlib==3.0.0
+mistune==0.8.3
+nbconvert==5.4.0
+nbformat==4.4.0
 numpy==1.15.1
 pandas==0.23.4
 pandas-datareader==0.7.0
+pandocfilters==1.4.2
 parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.4
@@ -30,8 +40,10 @@ requests==2.19.1
 scipy==1.1.0
 simplegeneric==0.8.1
 six==1.11.0
+testpath==0.4.2
 tornado==5.1.1
 traitlets==4.3.2
 urllib3==1.23
 wcwidth==0.1.7
+webencodings==0.5.1
 wrapt==1.10.11
